@@ -1,3 +1,8 @@
+Thu Jul 31 00:47:43 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (word_fnmatch): Free lowwhatis on return paths
+	  (Coverity CID #25).
+
 Thu Jul 31 00:40:29 BST 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/catman.c (parse_for_sec): Fix initialisation of initial_bit
